--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.beanstalk.beanstalkpapers">
+      package="com.tytan.tytanwallpapers">
 
     <uses-permission android:name="android.permission.SET_WALLPAPER"/>
 
@@ -8,7 +8,6 @@
 	<activity
             android:name=".NoWallpaper"
             android:label="@string/no_wallpaper"
-            android:theme="@style/Preview"
             android:icon="@drawable/nowallpaper_icon" >
             <intent-filter>
                 <action android:name="android.intent.action.SET_WALLPAPER" />
